mejora lista palabras
-La lista actualiza automaticamente
-Textarea fijo
-Arreglo alerts

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     
     <div class="listaPalabras">
       <button id ="ver" class="btn btn-outline-info" onClick="verLista()">Ver lista de palabras</button>
-      <textarea id="pistas" class="form-control" readonly></textarea>
+      <textarea id="pistas" class="form-control" rows="1" style="resize: none" readonly></textarea>
     </div>
     
     <footer>
