--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
       <div class="float-right" id="contadorErrores">Errores: <span id='errores'>0</span> de <span id='maximoErrores'></span></div>
       <button id ="agregar" class="btn btn-outline-info" onClick="agregarPalabra()">Agregar palabra</button>
       <input type="text" id="inputAgregar" class="inputAgregar">
+      <button id ="agregar" class="btn btn-outline-info" onClick="eliminarPalabra()">Eliminar palabra</button>
+      <input type="text" id="inputEliminar" class="inputAgregar">
       <div class="text-center" id="fotoInicio">
       <img src="./img/fotoHorca.png" class="img-responsive" height="25%" width="25%">
     </div>
