--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
       <!-- ACA APARECE EL TECLADO CUANDO EMPEZAMOS EL JUEGO -->  
       </div>
       <button id ="empezar" class="btn btn-primary btn-lg btn-block" onClick="empezar()">Empezar a jugar</button>
-      <button id ="reiniciar" class="btn btn-secondary btn-lg btn-block" onClick="reset()">Reinicar juego</button>   
+      <button id ="reiniciar" class="btn btn-secondary btn-lg btn-block" onClick="reset()">Reinicar juego</button>
+      <button id ="programacion" class="btn btn-outline-info" onClick="elegirCategoriaProgramacion()">Categoria Programacion</button>
+      <button id ="paises" class="btn btn-outline-info" onClick="elegirCategoriaPaises()">Categoria paises</button>   
     </div>
     
     <div class="listaPalabras">
