--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
     <div class="container">
       <div class="float-right" id="contadorErrores">Errores: <span id='errores'>0</span> de <span id='maximoErrores'></span></div>
-      <button id ="agregar" class="btn btn-outline-info" onClick="agregarPalabra()">Agregar palabra</button>
       <input type="text" id="inputAgregar" class="inputAgregar">
-      <button id ="agregar" class="btn btn-outline-info" onClick="eliminarPalabra()">Eliminar palabra</button>
+      <button id ="agregar" class="btn btn-outline-info" onClick="agregarPalabra()">Agregar palabra</button>
       <input type="text" id="inputEliminar" class="inputAgregar">
+      <button id ="agregar" class="btn btn-outline-info" onClick="eliminarPalabra()">Eliminar palabra</button>
       <div class="text-center" id="fotoInicio">
       <img src="./img/fotoHorca.png" class="img-responsive" height="25%" width="25%">
     </div>
@@ -60,11 +60,11 @@
     <footer class="text-center">
       <img src="img/aluralatam.JPG">
       
-      <div class="badge-base LI-profile-badge" data-locale="es_ES" data-size="large" data-theme="light" data-type="HORIZONTAL" data-vanity="julian-jensen" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://ar.linkedin.com/in/julian-jensen?trk=profile-badge">Julian Jensen</a></div>
+      <!-- <div class="badge-base LI-profile-badge" data-locale="es_ES" data-size="large" data-theme="light" data-type="HORIZONTAL" data-vanity="julian-jensen" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://ar.linkedin.com/in/julian-jensen?trk=profile-badge">Julian Jensen</a></div> -->
     </footer>
 
     <script src='./ahorcado.js'></script>
-    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+   <!-- <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script> -->
 
   </body>
 
